Harden production visibility A-B methodology